<resources>
    <string name="app_name">My new design</string>
    <string name="add_to_order">Add to Order</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="fi_oz">_ _ FI Oz</string>
    <string name="custom">Custom</string>
    <string name="_24_fi_oz">24 FI Oz</string>
    <string name="venti">Venti</string>
    <string name="_16_fi_oz">16 FI Oz</string>
    <string name="grande">Grande</string>
    <string name="_12_fi_oz">12 FI Oz</string>
    <string name="tall">Tall</string>
    <string name="size_options">Size Options</string>
    <string name="best_sales">Best Sales</string>
    <string name="_30_00">$30.00</string>
    <string name="frappuccino">Frappuccino</string>
    <string name="caramel">Caramel</string>
    <string name="details">Details</string>
</resources>